# youtube-captioner

./: .env.example  .gitignore  DEVELOPMENT_PLAN.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: jobs.py  main.py
backend/app/core/: captioner.py  config.py  downloader.py  transcriber.py  translator.py
backend/app/routers/: process.py  websocket.py
frontend/: Dockerfile  next.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/result/[jobId]/: page.tsx
frontend/src/components/: ApiKeySettings.tsx  DownloadPanel.tsx  ProcessForm.tsx  ProgressTracker.tsx  SubtitleEditor.tsx  VideoPlayer.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
src/: config.py  pipeline.py
src/modules/: __init__.py  captioner.py  downloader.py  formatter.py  metadata_manager.py  transcriber.py  translator.py
tests/: test_captioner.py  test_downloader.py  test_formatter.py  test_transcriber.py  test_translator.py
