[tool.poetry]
name = "youtube-caption-generator"
version = "0.1.0"
description = ""
authors = ["sucpark <sucpark0317@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2025.6.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
