[project]
name = "youtube-captioner-backend"
version = "1.0.0"
description = "FastAPI backend for YouTube Captioner"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "uvicorn[standard]>=0.40.0",
    "yt-dlp>=2025.12.8",
]
